<resources>
    <string name="app_name">Textile ECommerce</string>

    <!--Custom Dialog-->
    <string name="view">View</string>
    <string name="ok">OK</string>

    <!--Server Errors-->
    <string name="no_internet">Make you sure you are connected with internet</string>
    <string name="slow_internet">Your internet connection is very slow</string>
    <string name="server_error">Server Error</string>

    <!-- Login Screen Content -->
    <string name="login_screen_welcome_back_text">Welcome Back</string>
    <string name="login_screen_desc">Welcome back! Please enter your details</string>

    <!-- Login Fields Content  -->
    <string name="email_text">Email</string>
    <string name="enter_your_email_id_text">Enter Your Email ID</string>
    <string name="password_text">Password</string>
    <string name="password_hint_text">* * * * * * * *</string>
    <string name="forgot_password_text">Forgot Password ?</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_in_with_google_text">Sign in with google</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="sign_up_for_free">Sign up for free</string>

    <!-- Home Screen Menu Content -->
    <string name="settings_text">Settings</string>
    <string name="favourite_text">Favourite</string>
    <string name="my_bag_text">My Bag</string>
    <string name="home_text">Home</string>

    <!-- Profile Screen Content -->
    <string name="change_photo_text">change photo</string>
    <string name="name_text">Name</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="change_text">Change</string>
    <string name="submit_text">Submit</string>
    <string name="gender_text">Gender</string>
    <string name="my_profile_text">My Profile</string>

    <!-- Forget Password Screen Content -->
    <string name="forget_password_text">Forget Password</string>
    <string name="enter_email_address_text">Enter Email Address</string>
    <string name="sign_in_again_text">Sign in ?</string>
    <string name="back_to_text">Back to</string>
    <string name="send_text">Send</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- New Password Screen Content -->
    <string name="new_password_text">New Password</string>
    <string name="enter_new_password_text">Enter New Password</string>
    <string name="enter_confirm_password_text">Enter Confirm Password</string>

    <!-- Sign Up Screen Content -->
    <string name="create_account_text">Create Account</string>
    <string name="sign_up_desc">Let\'s Create Account Together</string>
    <string name="enter_full_name_text">Enter Full Name</string>
    <string name="already_have_an_account_text">Already have an account?</string>

    <!-- Verification Screen Content -->
    <string name="verification_text">Verification</string>
    <string name="enter_verification_code_text">Enter Verification Code</string>
    <string name="resend_text">Resend</string>
    <string name="if_you_didn_t_receive_code_text">If you didn\'t receive code!</string>
    <string name="verify_text">Verify</string>

    <!-- Setting Screen Content -->
    <string name="order_history_text">Order History</string>
    <string name="manage_address_text">Manage Address</string>
    <string name="track_your_order_text">Track Your Order</string>
    <string name="change_password_text">Change Password</string>
    <string name="help_center_text">Help Center</string>
    <string name="terms_and_condition_text">Terms and Condition</string>
    <string name="give_feedback_text">Give Feedback</string>
    <string name="log_out_text">Log Out</string>

    <!-- Terms Condition Content -->
    <string name="terms_and_conditions_text"><b>1. Introduction</b>
        \nWelcome to Magaswala! These Terms and Conditions ("Terms") govern your use of our mobile application and services. By accessing or using our mobile application, you agree to be bound by these Terms. If you do not agree with these Terms, please do not use our mobile application.
        \n
        \n<b>2. Use of Mobile Application</b>
        \nOur mobile application is intended for personal and non-commercial use only. You may not use our mobile application for any illegal or unauthorized purpose, nor may you, in the use of our mobile application, violate any laws in your jurisdiction.
        \n
        \n<b>3. Products and Pricing</b>
        \nWe offer authentic Indian sweets from Dakor, Gujarat for sale on our mobile application. We reserve the right to change our products and prices at any time without notice. We make every effort to ensure the accuracy of the information on our mobile application, but we cannot guarantee that the information is up-to-date or error-free.
        \n
        \n<b>4. Ordering and Payment</b>
        \nTo place an order on our mobile application, you must provide us with accurate and complete information, including your name, address, phone number, and payment information. We accept payment by various methods as indicated on our mobile application. By submitting your order, you authorize us to charge your payment method for the total amount of your order.
        \n
        \n<b>5. Shipping and Delivery</b>
        \nWe currently offer to ship within India only. We make every effort to ship your order as quickly as possible, but we cannot guarantee delivery times. We are not responsible for any delays or damages caused by shipping carriers.
        \n
        \n<b>6. Returns and Refunds</b>
        \nWe want you to be completely satisfied with your purchase. If for any reason you are not satisfied with your order, please contact us within 5 days of receiving your order to request a return or refund. We will work with you to resolve any issues as quickly as possible.
        \n
        \n<b>7. Intellectual Property</b>
        \nAll content on our mobile application, including text, graphics, logos, images, and software, is the property of Magaswala or its content suppliers and is protected by Indian and international copyright laws. You may not use or reproduce any content on our mobile application without our express written consent.
        \n
        \n<b>8. Disclaimer of Warranties</b>
        \nWe make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability, or availability with respect to our mobile application or the information, products, services, or related graphics contained on our mobile application for any purpose. Any reliance you place on such information is therefore strictly at your own risk.
        \n
        \n<b>9. Limitation of Liability</b>
        \nIn no event shall Magaswala or its owners, officers, employees, or agents be liable for any direct, indirect, incidental, special, or consequential damages arising out of or in any way connected with your use of our mobile application or our products, whether based on contract, tort, strict liability, or any other theory of liability.
        \n
        \n<b>10. Governing Law</b>
        \nThese Terms and Conditions shall be governed by and construed in accordance with the laws of India, without giving effect to any principles of conflicts of law.
        \n
    </string>

    <!-- Give FeedBack Content -->
    <string name="feedback_title_text">Tell Us What Can Be Improved?</string>
    <string name="overall_service_text">Overall Service</string>
    <string name="customer_support_text">Customer Support</string>
    <string name="pick_up_and_delivery_service_text">Pick up and delivery service</string>
    <string name="tell_us_how_can_we_improve_text">Tell us how can we improve...</string>

    <!-- Change Password Content -->
    <string name="current_password_text">Current Password</string>
    <string name="confirm_password_text">Confirm Password</string>

    <!-- Manage Address Content -->
    <string name="add_address_text">Add Address</string>
    <string name="contact_info_text">Contact Info</string>

    <!-- Add Address Content -->
    <string name="enter_name_text">Enter Name</string>
    <string name="enter_phone_number_text">Enter Phone Number</string>
    <string name="address_info_text">Address Info</string>
    <string name="country_text">Country</string>
    <string name="save_address_text">Save Address</string>
    <string name="make_as_default_address_text">Make As Default Address</string>
    <string name="state_text">State</string>
    <string name="city_text">City</string>
    <string name="pincode_text">Pincode</string>
    <string name="location_area_street_text">Location/Area/Street</string>
    <string name="flat_no_building_name_text">Flat No/Building Name</string>
    <string name="address_line_1_text">Address Line 1</string>
    <string name="landmark_optional_text">Landmark(Optional)</string>
    <string name="type_of_address_text">Type Of Address</string>
    <string name="office_text">Office</string>
    <string name="other_text">Other</string>
    <string name="order_summary_text">Order Summary</string>

</resources>