<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ib.textileecommerce.viewModel.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_app_title" />

            <TextView
                android:id="@+id/TVWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_31sdp"
                android:gravity="center"
                android:text="@string/login_screen_welcome_back_text"
                android:textColor="@color/headingColor"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TVLetslog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:gravity="center"
                android:text="@string/login_screen_desc"
                android:textColor="@color/descColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TVEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_34sdp"
                android:text="@string/email_text"
                android:textColor="@color/textFieldHeadingColor"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/layout_border"
                android:ems="10"
                android:hint="@string/enter_your_email_id_text"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/textFieldHeadingColor" />

            <TextView
                android:id="@+id/TVPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/password_text"
                android:textColor="@color/textFieldHeadingColor"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/layout_password_selector"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@drawable/layout_border"
                    android:ems="10"
                    android:hint="@string/password_hint_text"
                    android:inputType="textPassword"
                    android:textColor="@color/textFieldHeadingColor"
                    android:textColorHint="@color/textFieldHeadingColor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/TvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:padding="@dimen/_3sdp"
                android:text="@string/forgot_password_text"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:background="@drawable/layout_main_button"
                android:text="@string/sign_in_text"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:background="@drawable/layout_border"
                android:visibility="gone">

                <TextView
                    android:id="@+id/butSignInWithGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/white"
                    android:drawablePadding="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="@string/sign_in_with_google_text"
                    android:textAllCaps="false"
                    android:textColor="@color/textFieldHeadingColor"
                    app:drawableStartCompat="@drawable/ic_google" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/signup_free_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:weightSum="2">

                <com.ib.textileecommerce.customViews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/don_t_have_an_account_text"
                    android:padding="@dimen/_3sdp"
                    android:textColorHint="@color/textFieldHeadingColor"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:id="@+id/llSignUpForFree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.ib.textileecommerce.customViews.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/sign_up_for_free"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:src="@drawable/ic_arc" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>